# MASt3R-SLAM

./: .gitmodules  benchmark_all_kernels.py  benchmark_backends.py  main.py  pyproject.toml  setup.py
docs/: benchmark_results.json  metal_kernels_benchmark.md
mast3r_slam/: device.py  frame.py  geometry.py  global_opt.py  lietorch_utils.py  mast3r_utils.py  matching.py  retrieval_database.py  visualization.py
mast3r_slam/backends/: __init__.py  base.py
mast3r_slam/backends/cpu/: CMakeLists.txt  __init__.py  setup.py
mast3r_slam/backends/cpu/include/: gn.h  matching.h
mast3r_slam/backends/cpu/src/: bindings.cpp  gn.cpp  matching.cpp
mast3r_slam/backends/cuda/: __init__.py
mast3r_slam/backends/metal/: __init__.py  bindings.cpp  metal_context.h  metal_context.mm  metal_ops.h  metal_ops.mm  metal_ops_optimized.mm  setup.py
mast3r_slam/backends/metal/shaders/: gauss_newton.metal  gn.metal  matching.metal  matching_optimized.metal  sort.metal
mast3r_slam/liegroups/: __init__.py  se3.py  sim3.py
src/mlx_mast3r_slam/: __init__.py  config.py  dataloader.py  frame.py  geometry.py  global_opt.py  image.py  mast3r_utils.py  matching.py  optimizer.py  slam.py  tracker.py
src/mlx_mast3r_slam/backends/mpsgraph/: __init__.py  gauss_newton.py  gauss_newton_calib.py  gauss_newton_points.py  gn_calib_metal_runner.py  gn_metal_runner.py  gn_points_metal_runner.py  kernels.py  linalg.py  metal_runner.py  refine_metal_runner.py  sim3_ops.py
src/mlx_mast3r_slam/backends/mpsgraph/shaders/: gauss_newton.metal  gauss_newton_calib.metal  gauss_newton_points.metal  iter_proj.metal  refine_matches.metal
src/mlx_mast3r_slam/liegroups/: __init__.py  se3.py  sim3.py  so3.py
tests/: benchmark_backends.py  benchmark_mps.py  test_cpu_backend.py  test_metal_backend.py
